--- a/releaseNotes.json
+++ b/releaseNotes.json
@@ -1,4 +1,56 @@
 {
-  "counter": 1,
-  "date": "2017-01-01"
+  "version": "24-1",
+  "buildDate": "2024-04-06 18:59:09 (TZ: Europe/Berlin)",
+  "buildNumber": 13,
+  "description": "The first official release of WLH! CAUTION: Application is still under heavy development, and may not be stable and have a lack of features. Please report any bugs to the developer.",
+  "repository": "https://github.com/tvx17/wlh/tree/24-1",
+  "changelog": {
+    "added": [
+      {
+        "ref": "50279260",
+        "text": "First official release of WLH!"
+      }
+    ],
+    "changed": [
+      {
+        "ref": "50279260",
+        "text": "Updated the version number to 24-1."
+      },
+      {
+        "ref": "50279260",
+        "text": "Updated the build date to the current date."
+      },
+      {
+        "ref": "50279260",
+        "text": "Updated the build number to 1."
+      },
+      {
+        "ref": "50279260",
+        "text": "Updated the description to reflect the current state of the application."
+      },
+      {
+        "ref": "50279260",
+        "text": "Updated the repository link to the current repository."
+      }
+    ],
+    "deprecated": [
+      {
+        "ref": "50279260",
+        "text": "None"
+      }
+    ],
+    "removed": [
+      {
+        "ref": "50279260",
+        "text": "None"
+      }
+    ],
+    "fixed": [
+      {
+        "ref": "50279260",
+        "text": "None"
+      }
+    ]
+  },
+  "respository": "https://github.com/tvx17/wlh/tree/24-1"
 }
